add support for multiple secrets
